--- a/views/404.html
+++ b/views/404.html
@@ -5,6 +5,6 @@
 </head>
 <body>
 	<h1>Error 404: Page cannot be found!</h1>
-	<p>Click <a href="/">here</a> to return to main page</p>
+	<p>Click <a href="app.html">here</a> to return to main page</p>
 </body>
 </html>
