--- a/views/calculator.html
+++ b/views/calculator.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Basic HTML</title>
 	<link rel="icon" href="Barbie7_L.ico">
-	<link rel="stylesheet" type="text/css" href="css/calculator.css">
+	<link rel="stylesheet" type="text/css" href="public/css/calculator.css">
 </head>
 <body>
 	<div class="first">
@@ -18,9 +18,9 @@
 	
 	<div> Sum is <span id ="answer"></span></div>
 	
-	<button onclick="addMe()">Add Me</button>
+	<button onclick="addMe()">Add Me</button>i
 
-	<script type="text/javascript" src="js/calculator.js">
+	<script type="text/javascript" src="public/js/calculator.js">
 		
 	</script>
 </body>
