--- a/views/calculator.html
+++ b/views/calculator.html
@@ -18,7 +18,7 @@
 	
 	<div> Sum is <span id ="answer"></span></div>
 	
-	<button onclick="addMe()">Add Me</button>i
+	<button onclick="addMe()">Add Me</button>
 
 	<script type="text/javascript" src="public/js/calculator.js">
 		
