--- a/views/calculator.html
+++ b/views/calculator.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Basic HTML</title>
+	<title>Calculator</title>
 	<link rel="icon" href="Barbie7_L.ico">
-	<link rel="stylesheet" type="text/css" href="public/css/calculator.css">
+	<link rel="stylesheet" type="text/css" href="css/calculator.css">
 </head>
 <body>
 	<div class="first">
@@ -20,7 +20,7 @@
 	
 	<button onclick="addMe()">Add Me</button>
 
-	<script type="text/javascript" src="public/js/calculator.js">
+	<script type="text/javascript" src="js/calculator.js">
 		
 	</script>
 </body>
